--- a/portfolio_Rajesh/package.json
+++ b/portfolio_Rajesh/package.json
@@ -7,7 +7,11 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist",
+    "homepage": "https://rajeshkumarpathak01.github.io/Portfolio"
+
+
   },
   "dependencies": {
     "@react-three/fiber": "^9.1.2",
